   memory allocated through these calls, and locate the most expensive one.
   This helps finding the targets for manual memory sharing, or the threshold
   to use for smpi/auto-shared-malloc-thresh option.
 - New implemented MPI calls: MPI_File_set_size, MPI_Aint_add, MPI_Aint_diff,
   MPI_Type_get_extent_x, MPI_Type_get_true_extent_x, MPI_Status_set_elements_x
 - Misc fixes:
   - better handling of MPI_PROC_NULL
   - MPI_Group_incl was broken in some cases
   - PAPI tracing was fixed
   - MPI_Errhandlers are properly handled for MPI_COMM_WORLD
   - SMPI will now fail properly when receive size < sent size, instead of
     just setting MPI_ERR_TRUNCATE and keep going.
 - Proxy Apps ( https://framagit.org/simgrid/SMPI-proxy-apps ):
   - Remove useless build patches and split build/run patches on the page
   - Build in parallel when possible
   - Test on yum-based systems
   - New nightly tested Proxy-apps:
     - OpenMPI mpi-test-suite
     - Coral MCB, LSMS, Qbox
     - ECP/Mantevo Cloverleaf3D

C binding and interface:
 - Rename (lowercase) functions sg_actor_get_PID, sg_actor_get_PPID, sg_actor_by_PID.
 - Constness requirement has been lowered for parameter argv of sg_actor_start()
   and sg_actor_create() It's now (char* const*). The previous version is still
   available as sg_actor_start_() and sg_actor_create_().

Documentation:
 - New section: Configuring the logs from the command line.
 - New section: Programming API of logs.

Fixed bugs (FG#.. -> FramaGit bugs; FG!.. -> FG merge requests)
 (FG: issues on Framagit; GF: issues on GForge; GH: issues on GitHub)
 - FG#37: Parallel tasks are limited to 1 core per host
 - FG#62: Running "smpirun -replay" on large networks
 - FG!46: Fix a few potential memory leaks in SMPI colls
 - GH#343: Wrong consumed energy when an exec timeouts

----------------------------------------------------------------------------

SimGrid (3.26) December 15. 2020

The Release release (the French lockdown was eased today).
